# catscan

./: .gitignore  README.md  hatch.toml  pyproject.toml
.github/workflows/: main.yml  tests.yml
catscan/: parse.py  settings.py
catscan/lint/: __init__.py  base.py  context.py  error.py
catscan/lint/checks/: __init__.py  prop.py  ret.py  stat.py  var.py
catscan/utils/: log.py  tc3.py
scripts/: lint.bat  lint.sh
src/catscan/: __main__.py
src/catscan/lint/: __init__.py  context.py  error.py
src/catscan/lint/checks/: __init__.py  arg.py  exp.py  func.py  meth.py  prop.py  ret.py  var.py
src/catscan/utils/: program.py  typeutil.py  yamlutil.py
tests/: conftest.py  support.py  test_noqa.py
